============================== next release ==============================
  new data (Thanks to Mattias "MK8J", for submitting data in YAML format via GitHub!)
    main/Si/Daub.yml
    main/Si/Green-2008.yml
    main/Si/Schinke.yml
    main/Si/Sik-25C.yml
    main/Si/Sik-250C.yml
    main/Si/Sik-500C.yml
    main/Si/Sik-700C.yml
    main/Si/Sik-850C.yml
  new data
    main/GaP/Adachi.yml
    main/GaAs/Adachi.yml
    main/GaSb/Adachi.yml
    main/InP/Adachi.yml
    main/InAs/Adachi.yml
    main/InSb/Adachi.yml
    other/semiconductor alloys/AlAs-GaAs/Adachi-0.315.yml
    other/semiconductor alloys/AlAs-GaAs/Adachi-0.315.yml
    other/semiconductor alloys/GaAs-InAs/Adachi.yml
    other/semiconductor alloys/GaAs-InAs-GaP-InP/Adachi.yml
    main/ZnTe/Sato.yml
    main/CdSe/Ninomiya-o.yml
    main/CdSe/Ninomiya-e.yml
    main/CdSe/Ninomiya-cubic.yml
    main/GaN/Lin-wurtzite.yml
    main/GaN/Lin-zincblende.yml
    main/GaN/Kawashima.yml
    main/CdS/Ninomiya-o.yml
    main/CdS/Ninomiya-e.yml
    main/PbSe/Suzuki.yml
    main/AlAs/Rakic.yml
    main/GaAs/Rakic.yml
    main/GaAs/Ozaki.yml
    main/ZnS/Ozaki.yml
    main/AlSb/Adachi.yml
    main/ZnSe/Adachi.yml
    main/CdTe/Adachi.yml
    main/AlSb/Djurisic.yml
    main/GaSb/Djurisic.yml
    main/InSb/Djurisic.yml
  new data (Thanks to Ke Wang, Shenzhen University, China, for submitting data!)
    organic/C3H8O3 - glycerol/Wang.yml
    main/H2O/Wang.yml
    main/D2O/Wang.yml
    other/immersion oils/Leica Type F/Wang.yml
    other/immersion oils/Olympus IMMOIL-F30CC/Wang.yml
    other/immersion oils/Sigma Aldrich M5904/Wang.yml
  new data (thanks to Tobias König for submitting data!)
    main/ZnO/Stelling.yml
    main/MoO3/Stelling.yml
    other/mixed organic/PTB7-PC71BM/Stelling.yml
    other/mixed organic/P3HT-PC61BM/Stelling.yml
  updates:
    main/YVO4/Shi-o.yml: references
    main/YVO4/Shi-e.yml: references
    main/InP/Pettit.yml: references
    main/Si/Green.yml: renamed to "Green-1995.yml"